--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
             /* Nowe style tła */
             background-image: 
                 linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), /* Ciemny overlay dla czytelności */
-                url('https://i.imgur.com/gj1sZQj.jpg'); /* Poprawny link do obrazu */
+                url('https://i.imgur.com/X4FC0PH.png'); /* Poprawny link do obrazu */
             background-size: cover; /* Pokrywa całe tło */
             background-attachment: fixed; /* Tło jest stałe podczas przewijania */
             background-position: center center; /* Obraz wyśrodkowany */
